[gd_scene load_steps=4 format=3 uid="uid://mkx5kq802ncg"]

[ext_resource type="Script" path="res://Scripts/WorkerEntity.gd" id="1_rqcby"]
[ext_resource type="PackedScene" uid="uid://c816ih8m5cjw3" path="res://Entities/basic_entity_REMOTE_1987.tscn" id="2_pscmm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uh1ig"]
size = Vector2(14, 16)

[node name="WorkerEntity" type="CharacterBody2D" groups=["Worker"]]
input_pickable = true
script = ExtResource("1_rqcby")

[node name="Sprite2D" parent="." instance=ExtResource("2_pscmm")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uh1ig")

[node name="Devotion_Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="CanDrop" from="." to="." method="_on_can_drop"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="Devotion_Timer" to="." method="_on_devotion_timer_timeout"]
